tests/baselines/reference/spreadExcessProperty.errors.txt
spreadExcessProperty.ts(3,7): error TS2353: Object literal may only specify known properties, and 'extra' does not exist in type 'A'.


==== spreadExcessProperty.ts (1 errors) ====
    type A = { a: string, b: string };
    const extra1 = { a: "a", b: "b", extra: "extra" };
    const a1: A = { ...extra1 }; // spread should not give excess property errors
          ~~
!!! error TS2353: Object literal may only specify known properties, and 'extra' does not exist in type 'A'.
    